@@ -1,6 +1,6 @@
 # htmlxref.cnf - reference file for free Texinfo manuals on the web.
 
-htmlxrefversion=2015-01-30.00; # UTC
+htmlxrefversion=2015-02-03.18; # UTC
 
 # Copyright 2010, 2011, 2012, 2013, 2014, 2015 Free Software Foundation, Inc.
 # 
@@ -16,8 +16,8 @@ htmlxrefversion=2015-01-30.00; # UTC
 #
 # To be included in this list, a manual must:
 #
-# - have a generic url, i.e., no version numbers;
-# - have a unique file name (identifier), i.e., be related to the
+# - have a generic url, e.g., no version numbers;
+# - have a unique file name (e.g., manual identifier), i.e., be related to the
 #   package name.  Things like "refman" or "tutorial" don't work.
 # - follow the naming convention for nodes described at
 # http://www.gnu.org/software/texinfo/manual/texinfo/html_node/HTML-Xref.html
@@ -617,6 +617,20 @@ wget		node	${GS}/wget/manual/html_node/
 
 xboard		mono	${GS}/xboard/manual/xboard.html
 xboard		node	${GS}/xboard/manual/html_node/
+
+# emacs-page
+# Free TeX-related Texinfo manuals on tug.org.
+
+T = http://tug.org/texinfohtml
+
+dvipng		mono	${T}/dvipng.html
+dvips		mono	${T}/dvips.html
+eplain		mono	${T}/eplain.html
+kpathsea	mono	${T}/kpathsea.html
+latex2e		mono	${T}/latex2e.html
+tlbuild		mono	${T}/tlbuild.html
+web2c		mono	${T}/web2c.html
+
 
 # Local Variables:
 # eval: (add-hook 'write-file-hooks 'time-stamp)
